fix: revert to collect(toList())